# SiloCrawl

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  SiloLoop_Architecture.md  docker-compose.yml  models.yaml  pyproject.toml  render.yaml
.claude/skills/data-privacy-compliance/: SKILL.md
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: auth.py  config.py  telemetry.py
app/db/: __init__.py  audit_store.py  base.py  crawl_store.py  metrics.py  models.py  telemetry_store.py
app/llm/: __init__.py  base.py  config.py  overrides.py  registry.py  router.py
app/llm/providers/: __init__.py  openai_compat.py
app/loop/: __init__.py  benchmark.py  confidence.py  experiments.py  memory.py  orchestrator.py  prompts.py  retries.py  state_machine.py  strategy.py
app/models/: schemas.py
app/services/: cache.py  cleaner.py  code_review.py  crawl_runner.py  crawler.py  documents.py  evaluator.py  extractor.py  fetcher.py  jobstore.py  knowledge.py  mapper.py  netguard.py  planner.py  queue.py  repair.py  robots.py  scraper.py  throttle.py  verifier.py
app/workers/: crawl_worker.py
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/playground/: page.tsx
frontend/app/privacy/: page.tsx
frontend/components/: code-block.tsx  footer.tsx  navbar.tsx
frontend/lib/: api.ts  telemetry.ts
scripts/: llm_review.py
silocrawl/: __init__.py  _async.py  client.py
tests/: conftest.py  test_auth.py  test_benchmark.py  test_cache.py  test_cleaner.py  test_code_review.py  test_crawler.py  test_db.py  test_documents.py  test_experiments.py  test_extraction_loop.py  test_fetcher.py  test_knowledge.py  test_llm_router.py  test_loop_orchestrator.py  test_netguard.py  test_planner.py  test_privacy_rights.py  test_prompts.py  test_repair.py  test_retries.py  test_robots.py  test_routes.py  test_scraper_screenshot.py  test_telemetry.py  test_throttle.py  test_ux_events.py  test_verifier.py
