[project]
name = "silocrawl"
version = "0.1.0"
description = "Open-source, LLM-powered web scraping toolkit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["scraping", "crawling", "llm", "ai", "web-scraping", "data-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "trafilatura>=1.8",
    "markdownify>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.14.2",  # GHSA-4xgf-cpjx-pc3j
    "starlette>=1.3.1",  # PYSEC-2026-248/249 (transitive via fastapi; pin the floor)
    "arq>=0.25",
    "redis>=5.0",
    "openai>=1.0",
    "playwright>=1.43",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "jsonschema>=4.21",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.4"]
sdk = []  # alias — core deps already cover the SDK
ocr = ["rapidocr-onnxruntime>=1.3"]  # image / scanned-PDF text recognition

[project.urls]
Homepage = "https://github.com/arvinddev14/SiloCrawl"
Repository = "https://github.com/arvinddev14/SiloCrawl"

[tool.setuptools.packages.find]
include = ["app*", "silocrawl*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
